fixed build.xml for running unit tests

--- a/build.xml
+++ b/build.xml
@@ -54,7 +54,7 @@
           <include name="**/*Test*.java"/>
         </fileset>
       </batchtest>
-      <classpath refid="${project.classpath}" />
+      <classpath refid="project.classpath" />
     </junit>
   </target>
 
