--- a/build.xml
+++ b/build.xml
@@ -8,10 +8,10 @@
   <property name="main_class_name" value="changeme"/>
   <property name="jarname"  value="${ant.project.name}"/> 
   <!-- set directories -->
-  <property name="src" location="src"/>
-  <property name="sample" location="sample"/>
-  <property name="perf" location="perf"/>
-  <property name="crunch" location="crunch"/>
+  <property name="src" location="src/main"/>
+  <property name="sample" location="src/sample"/>
+  <property name="perf" location="src/perf"/>
+  <property name="crunch" location="src/crunch"/>
   <property name="test" location="test"/>
   <property name="build" location="build"/>
   <property name="dist"  location="dist"/>
