--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: bitcoin:1JXFuSanbDwUGSw2njR6CmbJhVqrnJwRCG
+custom: 1JXFuSanbDwUGSw2njR6CmbJhVqrnJwRCG
